<resources>
    <string name="app_name">Weather</string>
    <string name="city">- -</string>
    <string name="date">Mon June 17</string>
    <string name="main_weather">- -</string>
    <string name="temperature">- -</string>
    <string name="temperature_range">- -</string>
    <string name="humidity">湿度</string>
    <string name="humidity_value">- -</string>
    <string name="rainfall_probability">降雨量</string>
    <string name="rainfall_probability_value">- -</string>
    <string name="wind">风力</string>
    <string name="wind_value">- -</string>
    <string name="today">今天</string>
    <string name="next_seven_days">未来七天></string>
    <string name="weather">天气晴</string>
    <string name="hour">1 am</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_seven_date">04/23</string>
    <string name="next_seven_status">晴</string>
    <string name="next_seven_high_temp">30</string>
    <string name="next_seven_low_temp">24</string>
    <string name="city_manager">城市管理</string>
    <string name="search_city_weather">搜索城市天气</string>
</resources>