<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backBtnTomorrow"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_btn_background">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_arrow_white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:background="@drawable/back_2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="0.5"
                            android:contentDescription="@string/weather"
                            app:srcCompat="@drawable/_qingtianduoyun" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tomorrow"
                                android:textAlignment="viewStart"
                                android:textColor="@color/yellow"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tomorrow_temperature_range_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="- -"
                                android:textAlignment="viewStart"
                                android:textColor="@color/white"
                                android:textSize="36sp" />

                            <TextView
                                android:id="@+id/tomorrow_weather_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="- -"
                                android:textAlignment="viewStart"
                                android:textColor="@color/white"
                                android:textSize="24sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="0.333"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:contentDescription="@string/humidity"
                                android:scaleType="fitCenter"
                                android:src="@drawable/shidu_1" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/tomorrow_humidity_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="- -"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="0.333"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:contentDescription="@string/rainfall_probability"
                                android:scaleType="fitCenter"
                                android:src="@drawable/rain" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rainfall_probability"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/tomorrow_rain_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="- -"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="0.333"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:contentDescription="@string/wind"
                                android:scaleType="fitCenter"
                                android:src="@drawable/feng" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/tomorrow_wind_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="- -"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_next_seven_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:nestedScrollingEnabled="true" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>